# Freelance-Exchange

./: .env.example  .gitignore  README.md  dc-init-from-reserve.yml  dc-init.yml  dc-reserve.yml  docker-compose.dev.yml  main.py  mypy.ini  package-lock.json  package.json  pylint.rc  pyproject.toml  requirements.txt
config/db-init/: 1-SQL.sql
config/init/: 1-SQL.sql
project/: config.py
project/entities/: __init__.py  company.py  rating.py
project/storage/: storage_core.py
project/storage/modules/: companies_table.py  contacts_table.py  profiles_table.py  sessions_table.py
project/web/: server.py
project/web/controllers/: customer_controller.py  orders_controller.py  performer_controller.py  tmp_controller.py
project/web/pages/: base_layout.py
project/web/routes/: __init__.py  interface.py  tmp_regexp_routes.py  tmp_simple_routes.py
src/: config.py  main.py
src/dtos/: __init__.py  chat.py  company.py  contacts.py  customer.py  message.py  order.py  performer.py  session.py  user.py  validator.py
src/entities/: __init__.py  base.py  chat.py  company.py  customer.py  order.py  performer.py  rating.py  request.py
src/frontend/: auth.html  index.html  orders.html  package-lock.json  package.json  vite.config.ts
src/frontend/auth/: login.html  signup.html
src/frontend/script/: main.ts
src/frontend/style/: auth.scss  header.scss  main.scss  middle-order.scss  (+1 more)
src/storage/: __init__.py  exceptions.py  storage.py  storage_core.py
src/web/: exceptions.py  interface.py  patches.py  response.py  routes.py  server.py  simple_routes.py  web.py
(+61 files in other folders)
